@@ -1,7 +1,10 @@
 v0.6 (unreleased)
 [I don't know how long this will last]
+    -Added the following new functions:
+        (general) hfssAssignPointVariable(...)
     -Added support for arrays of single values in hfssSweepAnalysis.
     -Fix optional units argument in hfssEditSlave.
+    -Fix rotation/move of one element when specified with a string.
     -Improved documentation.
 
 v0.5 (09-December-2020)
